gogs/gogs-traefik-ingress-ssh.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gogs-ingress-ssh
spec:
  entryPoints:
    - ssh 
  routes:
    - match: HostSNI(`*`)
      services:
        - name: gogs-gogs 
          port: 10022
